Fixed #21 - Hero overlaps with breadcrumb in pricing section

--- a/src/assets/css/app/_pricing.scss
+++ b/src/assets/css/app/_pricing.scss
@@ -53,3 +53,11 @@
 .pricing-users {
     margin: 4rem -2rem 4rem -2rem;
 }
+
+@media screen and (max-width: 960px) {
+    .pricing { 
+        .pricing-content {
+            padding: 1.8rem 4rem;
+        }
+    }
+}
